fixtures/solidity/translated_semantic_tests/errors/require_different_errors_same_parameters/require_different_errors_same_parameters.sol
error AnError(uint256, string, uint256);
error AnotherError(uint256, string, uint256);
contract C
{
    function f() external pure
    {
        require(false, AnError(1, "two", 3));
    }
    function g() external pure
    {
        require(false, AnotherError(4, "five", 6));
    }
}